fixed some bugs when there are no notes and realigned notebook index

--- a/app/assets/stylesheets/notebooks.css
+++ b/app/assets/stylesheets/notebooks.css
@@ -76,7 +76,7 @@
 }
 
 .ti {
-  flex-basis: 35%;
+  flex-basis: 30%;
   margin-left: 10px;
 
   display: flex;
@@ -98,7 +98,7 @@
 }
 
 .cr {
-  flex-basis: 15%;
+  flex-basis: 20%;
 }
 
 .table-labels .cr:hover {
@@ -107,7 +107,7 @@
 
 .up {
   font-size: 12px;
-  flex-basis: 20%;
+  flex-basis: 25%;
   padding-right: 10px;
 }
 
@@ -120,7 +120,7 @@
 }
 
 .sh {
-  flex-basis: 25%;
+  flex-basis: 20%;
 }
 
 .table-labels .sh:hover {
